Possible fix for user story #64, carousel indicators are now always the inverse color of whatever is behind them along the Z-axis.

--- a/src/resources/css/bootstrap.css
+++ b/src/resources/css/bootstrap.css
@@ -6325,6 +6325,7 @@ button.close {
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
   background-color: rgba(0, 0, 0, 0);
+  mix-blend-mode: difference !important;
   filter: alpha(opacity=50);
   opacity: .5;
 }
@@ -6397,6 +6398,7 @@ button.close {
   margin-left: -30%;
   text-align: center;
   list-style: none;
+  mix-blend-mode: difference;
 }
 .carousel-indicators li {
   display: inline-block;
